# netcafe

./: CMakeLists.txt  README.md  THE_LAW.txt  main.cpp
include/: NetMessage.h
sandbox/: SimpleExample.cpp  sandbox.h
